test/scc/stmt/semantic-errors/000.t
void test()
{
    case 1:
        ;
}